--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         <div>
             <h2>Ingrese un número para encriptar</h2>
             <form>
-                <input type="text" name="numero" id="numeroInput1" inputmode="numeric" pattern="[0-9]*" placeholder="Ingrese un número" required>
+                <input type="text" name="numero" id="numeroInputEncriptar" inputmode="numeric" pattern="[0-9]*" placeholder="Ingrese un número" required>
                 <br>
             </form>
-            <div id="contenido1"></div>            
-            <button id="copiarBoton1">Copiar</button>
+            <div id="contenidoEncriptado"></div>            
+            <button id="copiarBotonEncriptar">Copiar</button>
 
         </div>
         <div>
             <h2>Ingrese un número para desencriptar</h2>
             <form>
-                <input type="text" name="numero" id="numeroInput2" inputmode="numeric" pattern="[0-9]*" placeholder="Ingrese un número" required>
+                <input type="text" name="numero" id="numeroInputDesencriptar" inputmode="numeric" pattern="[0-9]*" placeholder="Ingrese un número" required>
                 <br>
             </form>
-            <div id="contenido2"></div>            
-            <button id="copiarBoton2">Copiar</button>
+            <div id="contenidoDesencriptado"></div>            
+            <button id="copiarBotonDesencriptar">Copiar</button>
 
         </div>
     </div>
